# rendevox

./: .gitignore  README.md  install-arch-dependencies.sh  install-dependencies.sh  run-linux.sh  run-macos.sh  run.sh
app/src/: app.c
rendevox/: CMakeLists.txt  main.c
rendevox/include/: color.h  entity.h  entityBuffer.h  mathematicalOperations.h  matrix4.h  mesh.h  openglRender.h  openglWindow.h  rendevox.h  sorting.h  triangle.h  user.h  vector2.h  vector3.h  vulkanWindow.h  window.h
rendevox/include/glad/: glad.h
rendevox/resources/: 3d-projection.md
rendevox/src/: customFunctions.c  entityBuffer.c  glad.c  main.c  mathematicalOperations.c  matrix4.c  mesh.c  openglRender.c  openglWindow.c  render.c  rendevox.h  scene.c  sdlDrawing.c  sdlFont.c  sdlWindow.c  sorting.c  vector3.c  vulkanWindow.c  window.c
